# nju_aics_exp

./: .gitattributes  README.md
exp1/student/: dataloader.py  main.py
exp1/teacher/: components.py  main.py  val_components.py
exp2/student/: layer.py  main.py  vgg.py
exp2/teacher/: exp2_fully.ipynb  layer.py  vgg.py
exp2/teacher/.ipynb_checkpoints/: exp2_fully-checkpoint.ipynb
exp3/student/: app.py  convert_model.sh
exp3/teacher/: app.py  process.py  sample.sh
exp5/student/IRBuild/: CMakeLists.txt
exp5/student/IRBuild/scripts/: testcase_300.sh
exp5/student/IRBuild/src/: main.cpp
exp6/student/: test_batch_normalization_dsl.json
exp6/teacher/: exp6_fully.ipynb  test_batch_normalization_dsl2.json  test_softmax_case.json
exp7/student/: exp7_quant_fully.ipynb  quant_module.py  vgg.py
exp7/teacher/: exp7_quant_fully.ipynb  quant_inference.py  quant_module.py  vgg.ckpt
一 基于三层感知机实现手写数字识别/: 实验一README.md
一 基于三层感知机实现手写数字识别/基于三层感知机实现手写数字识别 student/: components.py  实验一：基于三层感知机实现手写数字识别操作手册学生版.docx
一 基于三层感知机实现手写数字识别/基于三层感知机实现手写数字识别 teacher/: 基于三层感知机实现手写数字识别.ipynb  实验一：基于三层感知机实现手写数字识别操作手册.docx
七 基于MindSpore推理的量化实验/: 实验七README.md
七 基于MindSpore推理的量化实验/基于MindSpore推理的量化实验 student/: 实验七：基于MindSpore推理的量化实验指导书学生版.docx
七 基于MindSpore推理的量化实验/基于MindSpore推理的量化实验 teacher/: exp7_quant_fully.ipynb  基于MindSpore推理的量化实验.ipynb  实验七：基于MindSpore推理的量化实验指导书.docx
三 基于ACL搭建VGG16实现图像分类应用/: 实验三README.md
三 基于ACL搭建VGG16实现图像分类应用/基于ACL搭建VGG16实现图像分类应用 student/: 实验三：基于ACL搭建VGG16实现图像分类应用操作手册学生版.docx
三 基于ACL搭建VGG16实现图像分类应用/基于ACL搭建VGG16实现图像分类应用 teacher/: convert_model.sh  基于ACL搭建VGG16实现图像分类应用.ipynb  实验三：基于ACL搭建VGG16实现图像分类应用操作手册教师版.docx
二 搭建VGG16神经网络实现图像分类/: 实验二README.md
二 搭建VGG16神经网络实现图像分类/搭建VGG16神经网络实现图像分类 student/: 实验二：搭建VGG16神经网络实现图像分类实验指导书学生版.docx
二 搭建VGG16神经网络实现图像分类/搭建VGG16神经网络实现图像分类 teacher/: main.py  实验二：搭建VGG16神经网络实现图像分类实验指导书.docx  搭建VGG16神经网络实现图像分类.ipynb
五 基于CANN实现VGG17/: 实验五README.md
八 全流程垃圾分类应用/: 实验八README.md
八 全流程垃圾分类应用/全流程垃圾分类应用 student/: 实验八：全流程垃圾分类应用实验指导书学生版.docx
八 全流程垃圾分类应用/全流程垃圾分类应用 teacher/: exp8_step1_train_eval.ipynb  exp8_step2_infer.ipynb  实验八：全流程垃圾分类应用实验指导书.docx
六 TBE算子开发与集成/: 实验六README.md
六 TBE算子开发与集成/TBE算子开发与集成 student/: batch_normalization_dsl.json
六 TBE算子开发与集成/TBE算子开发与集成 teacher/: Softmax.json  env_npu.sh  exp6_fully.ipynb
四 基于MIndSpore框架实现VGG17训练与验证/: 实验四README.md
四 基于MIndSpore框架实现VGG17训练与验证/student/: 实验四：基于MIndSpore框架实现VGG17训练与验证操作手册学生版.docx
(+96 files in other folders)
